# nuclode

./: .dlp-ignore.json  .env.example  .gitignore  README.md  distill-claude-code-insights-usage-report.md  distill-security-hardening-plan-devtools-lite.md  nuclode  pyproject.toml  setup.sh
.claude/: AGENTS.md  CLAUDE.md  WORKFLOW.md  settings.json
.claude/agents/: active-defender.md  cause-check.md  claims-auditor.md  claude-perf.md  code-implementer.md  code-planner.md  code-reviewer.md  glossary-reviewer.md  link-auditor.md  nuclode-guide.md  research-analyst.md  test-writer.md
.claude/beads/: AGENT_INSTRUCTIONS.md
.claude/commands/: build-fix.md  conversation-id.md  fact-check.md  find-counterarguments.md  guided.md  issue.md  research-review.md  research.md  session-status.md  ship.md  spec-review.md  watch.md
.claude/global/: CLAUDE.md  settings.json
.claude/hooks/: agent-watch-post.sh  agent-watch-pre.sh  agent_tracker.py  allowed-domains.txt  beads_sync.py  console_warn.py  network-guard.sh  nuclode_watch.py  pages_guard.py  post_edit_format.py  pre_compact.py  pre_tool_use.py  sast_gate.py  sast_scan.py  secrets_scan.py  sensitive-path-guard.sh  session_end.py  session_start.py  statusline.sh  suggest_compact.py  (+1 more)
core/: CLAUDE.md  settings.json
docs/: ARCHITECTURE.md  BEADS_WORKFLOW.md  CUSTOMIZATION.md
engine/: __init__.py  cost_tracker.py  runner.py
recipes/: __init__.py
scripts/: check-standards-sync.sh
shell/: nuclode.sh
templates/: beads-init.sh  project-CLAUDE.md
tests/: test_hooks.py
workspace/: CLAUDE.md  settings.json
(+146 files in other folders)
